--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
-TODO list:
+Still TODO :
 
-- client / serveur architecture et daemonize le serveur
 - intégrer un système de validation (tests/* )à chaque commit
 - mettre chaque module dans des classes
+- gérer les sessions longue durée (perte de connexion avec la wiimote + pywii
+en pending)
+- faire de Wiimote() un truc plus modulaire (utilisable dans un ipython par ex)
